# Jory-protfolio

./: .breakpoints  .replit  README.md  app.py  database.py  pyproject.toml
templates/: banner.html  contactme.html  home.html
