[tool.poetry]
name = "repl-nix-jory-protfolio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_jory_protfolio"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
consultor = "^0.2.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
